test: 데이터 삭제 검증 시 삭제되 아이디로 findById 확인